【优化】发布时配置文件修改